syntax = "proto3";

package lessworkflow.documentservice;

option go_package = "github.com/albertsen/lessworkflow/gen/proto/documentservice";

import "proto/document/document.proto";

service DocumentService {
  rpc CreateDocument(CreateDocumentRequest) returns (CreateDocumentResponse) {}
  rpc UpdateDocument(UpdateDocumentRequest) returns (UpdateDocumentResponse) {}
  rpc GetDocument(GetDocumentRequest) returns (GetDocumentResponse) {}
  rpc DeleteDocument(DeleteDocumentRequest) returns (DeleteDocumentResponse) {}
}

message CreateDocumentRequest { 
  lessworkflow.document.Document document = 1; 
}

message CreateDocumentResponse { 
  lessworkflow.document.Document document = 1; 
}

message UpdateDocumentRequest { 
  lessworkflow.document.Document document = 1; 
}

message UpdateDocumentResponse { 
  lessworkflow.document.Document document = 1; 
}

message GetDocumentRequest { 
  string document_id = 1; 
  string type = 2; 
}

message GetDocumentResponse { 
  lessworkflow.document.Document document = 1; 
}

message DeleteDocumentRequest { 
  string document_id = 1; 
  string type = 2; 
}

message DeleteDocumentResponse {
}
